--- a/src/styles/settings/app.scss
+++ b/src/styles/settings/app.scss
@@ -1,10 +1,10 @@
 $respond-to-no-mediaqueries-fallback: phone;
 $respond-to-fallback-class: lt-ie9;
 $respond-to-breakpoints: (
-  large "screen and (max-width: 1090px)",
-  medium "screen and (max-width: 821px)",
-  small "screen and (max-width: 649px)",
-  half "screen and (max-width: 500px)"
+  large 'screen and (max-width: 1090px)',
+  medium 'screen and (max-width: 821px)',
+  small 'screen and (max-width: 649px)',
+  half 'screen and (max-width: 500px)'
 );
 @mixin respond-to($medias...) {
   $breakpoints-length: length($respond-to-breakpoints);
@@ -63,7 +63,7 @@ a.link-disable {
 
 .label-new-right {
   &::after {
-    content: "New";
+    content: 'New';
     font-size: 11px;
     background-color: #ff7b7b;
     color: #fff;
@@ -90,7 +90,7 @@ a.link-disable {
   align-items: center;
   height: 100vh;
   &::before {
-    content: "";
+    content: '';
     position: absolute;
     background-color: lightgrey;
     width: 100%;
