--- a/src/components/Elemements/Button/Button.scss
+++ b/src/components/Elemements/Button/Button.scss
@@ -441,14 +441,17 @@ $respond-to-breakpoints: (
   }
   &--remove {
     @include greenBtn;
-    display: inline-flex;
-    align-items: center;
-    justify-content: center;
-    padding: 7px 10px;
-    border-radius: 5px;
-    font-weight: 700;
-    box-sizing: border-box;
-    min-width: 66px;
+    & {
+      display: inline-flex;
+      font-weight: 700;
+      box-sizing: border-box;
+      min-width: 66px;
+      border-radius: 5px;
+      padding: 7px 10px;
+      align-items: center;
+      justify-content: center;
+    }
+
     &--font-size13 {
       font-size: 13px;
     }
@@ -498,17 +501,20 @@ $respond-to-breakpoints: (
   }
   &--nav {
     @include greenBtn;
-    display: inline-flex;
-    align-items: center;
-    justify-content: center;
-    min-width: 66px;
-    min-height: 32px;
-    padding: 7px 10px;
-    border-radius: 5px;
-    font-size: 13px;
-    font-weight: 700;
-    box-sizing: border-box;
-    cursor: pointer;
+    & {
+      display: inline-flex;
+      align-items: center;
+      justify-content: center;
+      min-width: 66px;
+      min-height: 32px;
+      padding: 7px 10px;
+      border-radius: 5px;
+      font-size: 13px;
+      font-weight: 700;
+      box-sizing: border-box;
+      cursor: pointer;
+    }
+
     > span {
       margin-right: 5px;
     }
