--- a/src/components/Form/Form.scss
+++ b/src/components/Form/Form.scss
@@ -1,10 +1,10 @@
 $respond-to-no-mediaqueries-fallback: phone;
 $respond-to-fallback-class: lt-ie9;
 $respond-to-breakpoints: (
-  large "screen and (max-width: 1090px)",
-  medium "screen and (max-width: 821px)",
-  small "screen and (max-width: 649px)",
-  half "screen and (max-width: 500px)"
+  large 'screen and (max-width: 1090px)',
+  medium 'screen and (max-width: 821px)',
+  small 'screen and (max-width: 649px)',
+  half 'screen and (max-width: 500px)'
 );
 @mixin respond-to($medias...) {
   $breakpoints-length: length($respond-to-breakpoints);
@@ -253,7 +253,9 @@ $respond-to-breakpoints: (
                 width: 100%;
               }
             }
-            width: 100%;
+            & {
+              width: 100%;
+            }
             .form-control__in {
               input.in {
                 max-width: 100%;
@@ -409,10 +411,12 @@ $respond-to-breakpoints: (
           flex-direction: column;
           align-items: start;
         }
-        display: flex;
-        align-items: center;
-        padding-bottom: 10px;
-        box-sizing: border-box;
+        & {
+          display: flex;
+          align-items: center;
+          padding-bottom: 10px;
+          box-sizing: border-box;
+        }
         &.item-top {
           align-items: start;
           &.label-custom {
@@ -444,7 +448,9 @@ $respond-to-breakpoints: (
                 width: 100%;
               }
             }
-            width: 100%;
+            & {
+              width: 100%;
+            }
             .form-control__in {
               input.in {
                 max-width: 100%;
@@ -823,7 +829,9 @@ $respond-to-breakpoints: (
             @include respond-to(small) {
               max-width: 100%;
             }
-            width: 100%;
+            & {
+              width: 100%;
+            }
             .form-control__in {
               input.in {
                 max-width: 100%;
@@ -1004,7 +1012,7 @@ $respond-to-breakpoints: (
           margin-bottom: 10px;
           margin-right: 30px;
           &.require:after {
-            content: "*";
+            content: '*';
             color: #960013;
             margin-left: 5px;
             margin-top: 2px;
@@ -1115,7 +1123,9 @@ $respond-to-breakpoints: (
             @include respond-to(small) {
               margin-top: 15px;
             }
-            margin-top: 0;
+            & {
+              margin-top: 0;
+            }
           }
 
           &:nth-child(3) {
@@ -1125,7 +1135,9 @@ $respond-to-breakpoints: (
             @include respond-to(small) {
               margin-top: 15px !important;
             }
-            margin-top: 0;
+            & {
+              margin-top: 0;
+            }
           }
 
           /* SORT DESC  */
@@ -1469,7 +1481,7 @@ $respond-to-breakpoints: (
   margin-bottom: 24px;
   &::after {
     position: absolute;
-    content: "";
+    content: '';
     top: 0;
     left: 0;
     width: 100%;
@@ -1643,9 +1655,7 @@ $respond-to-breakpoints: (
         border-radius: 5px;
         color: #fff;
         padding: 6px 40px;
-        transition:
-          background-color 0.35s,
-          color 0.35s;
+        transition: background-color 0.35s, color 0.35s;
         &:hover {
           background-color: #fff;
           color: #1064a0;
